Adds JUnit Extensions properties to tycho command line. Fixes #558